connect reset test

--- a/yongDa20171121/index.html
+++ b/yongDa20171121/index.html
@@ -20,13 +20,13 @@
            
         }
         .ban1{
-            background-image:url("/yongDa20171121/images/ban1.jpg"); 
+            background-image:url("images/ban1.jpg"); 
         }
         .ban2{
             background-image:url("/../images/ban2.jpg"); 
         }
         .ban3{
-            background-image:url("../images/ban3ForComputer.jpg"); 
+            background-image:url("/../images/ban3ForComputer.jpg"); 
             
         }
         .my-slider{
