--- a/yongDa20171121/index.html
+++ b/yongDa20171121/index.html
@@ -23,10 +23,10 @@
             background-image:url("images/ban1.jpg"); 
         }
         .ban2{
-            background-image:url("/../images/ban2.jpg"); 
+            background-image:url("../images/ban2.jpg"); 
         }
         .ban3{
-            background-image:url("/../images/ban3ForComputer.jpg"); 
+            background-image:url("../yongDa20171121/images/ban3ForComputer.jpg"); 
             
         }
         .my-slider{
