--- a/yongDa20171121/index.html
+++ b/yongDa20171121/index.html
@@ -26,7 +26,7 @@
             background-image:url("../images/ban2.jpg"); 
         }
         .ban3{
-            background-image:url("/../yongDa20171121/images/ban3ForComputer.jpg"); 
+            background-image:url("/zoeline.github.io/yongDa20171121/images/ban3ForComputer.jpg"); 
             
         }
         .my-slider{
