--- a/yongDa20171121/index.html
+++ b/yongDa20171121/index.html
@@ -49,13 +49,13 @@
             top:60vh;
         }
         .ban1{
-            background-image:url("../../images/ban.jpg"); 
+            background-image:url("/../../images/ban.jpg"); 
         }
         .ban2{
-            background-image:url("../../images/ban2.jpg"); 
+            background-image:url("/../../images/ban2.jpg"); 
         }
         .ban3{
-            background-image:url("../../images/ban3ForComputer.jpg"); 
+            background-image:url("/../../images/ban3ForComputer.jpg"); 
         }
         .logo{
             position:absolute;
@@ -76,9 +76,9 @@
              
         }
     </style>
-    <link rel="stylesheet" href="../../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../../css/unslider.css">
-    <link rel="stylesheet" href="../../css/unslider-dots.css">
+    <link rel="stylesheet" href="/../../css/bootstrap.min.css">
+    <link rel="stylesheet" href="/../../css/unslider.css">
+    <link rel="stylesheet" href="/../../css/unslider-dots.css">
     
 </head>
 <body>
