complete link reset

--- a/yongDa20171121/index.html
+++ b/yongDa20171121/index.html
@@ -20,13 +20,13 @@
            
         }
         .ban1{
-            background-image:url("images/ban.jpg"); 
+            background-image:url("/yongDa20171121/images/ban.jpg"); 
         }
         .ban2{
-            background-image:url("../images/ban2.jpg"); 
+            background-image:url("/yongDa20171121/images/ban2.jpg"); 
         }
         .ban3{
-            background-image:url("/zoeline.github.io/yongDa20171121/images/ban3ForComputer.jpg"); 
+            background-image:url("/yongDa20171121/images/ban3ForComputer.jpg"); 
             
         }
         .my-slider{
@@ -49,13 +49,13 @@
             top:60vh;
         }
         .ban1{
-            background-image:url("/../../images/ban.jpg"); 
+            background-image:url("/yongDa20171121/images/ban.jpg"); 
         }
         .ban2{
-            background-image:url("/../../images/ban2.jpg"); 
+            background-image:url("/yongDa20171121/images/ban2.jpg"); 
         }
         .ban3{
-            background-image:url("/../../images/ban3ForComputer.jpg"); 
+            background-image:url("/yongDa20171121/images/ban3ForComputer.jpg"); 
         }
         .logo{
             position:absolute;
@@ -88,7 +88,7 @@
     <div class="my-slider">
         <!-- LOGO -->
         <div class="logo">
-              <img src="../images/yo.jpg" alt="">
+              <img src="/yongDa20171121/images/yo.jpg" alt="">
             <h1>永大義式冰淇淋</h1>
             <h5>Yong-Da Gelato</h5>
         </div>
