--- a/yongDa20171121/index.html
+++ b/yongDa20171121/index.html
@@ -74,7 +74,8 @@
     <div class="divider">
         <h6 id="fat" class="sedtitle" style="padding-left:15px;">/嚴選食材/</h6>
     </div>
-    <div class="con">
+    <div class="con ">
+            <div class="con ">
         <div class="left">
             <h6>乳品</h6>
             <P>鮮奶是使用有鮮乳標章的加大乳品。</P>
@@ -91,31 +92,47 @@
         </div>
     </div>
 <!-- block2ed -->
-    <div class="divider">
-            <h6 id="mdo" class="sedtitle" style="padding-left:15px;">/本季經典/</h6>
+    
+    <div class="container">
+        <div class="divider row">
+            <div class="col-5"></div>
+            <h6 id="mdo" class="col-2">/本季經典/</h6>
+            <div class="col-5"></div>
+        </div>
+    <div class="row ">
+            <div class="col-2"></div>
+            <img class="col-2" src="/yongDa20171121/images/white.png" alt=""data-aos="fade-up"
+            data-aos-anchor-placement="center-center">
+            <div class="col-1"></div>
+            <img class="col-2" src="/yongDa20171121/images/orange.png" alt=""data-aos="fade-up"
+            data-aos-anchor-placement="center-center">
+            <div class="col-1"></div>
+            <img class="col-2" src="/yongDa20171121/images/purple.png" alt=""data-aos="fade-up"
+            data-aos-anchor-placement="center-center">
+            <div class="col-2"></div>
     </div>
-    <div class="row row1">
-            <img src="/yongDa20171121/images/white.png" alt=""data-aos="fade-up"
+    <div class="row ">
+            <div class="col-3"></div>
+            <img class="col-2" src="/yongDa20171121/images/pink.png" alt=""data-aos="fade-up"
             data-aos-anchor-placement="center-center">
-            <img src="/yongDa20171121/images/orange.png" alt=""data-aos="fade-up"
+            <div class="col-2"></div>
+            <img class="col-2" src="/yongDa20171121/images/green.png" alt=""data-aos="fade-up"
             data-aos-anchor-placement="center-center">
-            <img src="/yongDa20171121/images/purple.png" alt=""data-aos="fade-up"
-            data-aos-anchor-placement="center-center">
+            <div class="col-3"></div>
     </div>
-    <div class="row row2">
-            <img src="/yongDa20171121/images/pink.png" alt=""data-aos="fade-up"
+    <div class="row ">
+            <div class="col-2"></div>
+            <img class="col-2" src="/yongDa20171121/images/yallow.png" alt=""data-aos="fade-up"
             data-aos-anchor-placement="center-center">
-            <img src="/yongDa20171121/images/green.png" alt=""data-aos="fade-up"
+            <div class="col-1"></div>
+            <img class="col-2" src="/yongDa20171121/images/blue.png" alt=""data-aos="fade-up"
             data-aos-anchor-placement="center-center">
+            <div class="col-1"></div>
+            <img class="col-2" src="/yongDa20171121/images/brown.png" alt=""data-aos="fade-up"
+            data-aos-anchor-placement="center-center">
+            <div class="col-2"></div>
     </div>
-    <div class="row row3">
-            <img src="/yongDa20171121/images/yallow.png" alt=""data-aos="fade-up"
-            data-aos-anchor-placement="center-center">
-            <img src="/yongDa20171121/images/blue.png" alt=""data-aos="fade-up"
-            data-aos-anchor-placement="center-center">
-            <img src="/yongDa20171121/images/brown.png" alt=""data-aos="fade-up"
-            data-aos-anchor-placement="center-center">
-    </div>
+</div>
 <!-- block3rd -->
     <div class="divider">
             <h6 id="one" class="sedtitle" style="padding-left:15px;">/口味一覽/</h6>
