--- a/yongDa20171121/index.html
+++ b/yongDa20171121/index.html
@@ -152,7 +152,7 @@
         </div>
       <div class="row">
           <div class="col-1"></div>
-        <img class="h-100 col-10" src="/yongDa20171121/images/menu-01.jpg" alt="">
+        <img class="h-100 col-10" src="/yongDa20171121/images/menu-01.jpg" alt="" style="box-shadow:1px 1px 1px black">
         <div class="col-1"></div>
       </div>
       
