--- a/yongDa20171121/index.html
+++ b/yongDa20171121/index.html
@@ -172,8 +172,7 @@
         </div>
         <!-- border border-info邊框 -->
         <div class="row ">
-          <div class="col-3"></div>
-          <div class="col-3 text-nowrap">
+          <div class="col-6 col-md-4 mr-0 text-nowrap">
             <p>2017/11/02&nbsp;永大冬季營業時間調整：</p>
             <p>2017/11/01&nbsp;秋季暖心冰淇淋新口味：</p>
             <p>2017/10/30&nbsp;萬聖搞鬼冰淇淋新口味：</p>
@@ -182,7 +181,7 @@
             <p>2017/10/12&nbsp;閃亮登場！冰淇淋新口味：</p>
             <p>2017/09/21&nbsp;許願特別版冰淇淋新口味：</p>
           </div>
-          <div class="col-3 text-nowrap">
+          <div class="col-6 col-md-4 ml-0 text-nowrap">
             <p>星期(六)丶(日) 12:00~20:30，星期(一)～(五)公休 </p>
             <p>烤地瓜鮮奶</p>
             <p>白芝麻巧克力鮮奶</p>
@@ -191,7 +190,7 @@
             <p>草莓玫瑰優格冰淇淋</p>
             <p>釋迦鮮奶(每人限購1球)</p>
           </div>
-          <div class="col-3"></div>
+          
         </div>
     </div>
   </div>
