--- a/datapro/index.html
+++ b/datapro/index.html
@@ -19,7 +19,7 @@
         <!-- banner -->
         <div class="row ban">
             <img class="logo" src="/datapro/images/c7.png" alt="" > 
-            <img class="col-12" src="/datapro/images/banner-02.jpg" alt=""></div>  
+            <img class="col-12" src="../datapro/images/banner-02.jpg" alt=""></div>  
        
         <div class="mt-0 row"> 
             <!-- NAV -->
