--- a/cysteel/index.html
+++ b/cysteel/index.html
@@ -340,7 +340,7 @@ p {
 							<div class="row featurette" id="intro">
 							  <div class="col-md-7">
 								<h2 class="featurette-heading">公司介紹 <span class="text-muted">intro</span></h2>
-								<p class="lead">成立於1974年的嘉鋼集團，是主力於鋼鐵鑄造生產的專業團隊。從成立以來，我們即不斷引進各種先進之生產設備，故產能不斷擴充，營運規模不斷擴展，為持續達成卓越生產目標，我們與日本大廠技術合作，導入高階的產業技術。由於經營團隊的穩健經營，及技術與品質不斷的精進，營運規模快速擴展；因應市場的需求，集團於2006年及2008年分別在大陸成立了中佑鑄造(河北唐山廠)有限公司、中佑機械工業有限公司(江蘇太倉廠)來增加產值與產能。歷經了40年的淬鍊，使「嘉鋼集團」成為品質保證的代名詞，專業優質的形象，深植每一個客戶的腦海，獲得高度認同與信賴。</p>
+								<p class="lead">成立於1974年的嘉鋼集團，是主力於鋼鐵鑄造生產的專業團隊。從成立以來，我們即不斷引進各種先進之生產設備，故產能不斷擴充，營運規模不斷擴展，為持續達成卓越生產目標，我們與日本大廠技術合作，導入高階的產業技術。</p>
 							  </div>
 							  <div class="col-md-5">
 								<img class="featurette-image img-fluid mx-auto" src="https://cdn.pixabay.com/photo/2016/10/06/10/40/steel-construction-1718715_960_720.jpg" alt="Generic placeholder image">
