--- a/cysteel/index.html
+++ b/cysteel/index.html
@@ -272,7 +272,7 @@ p {
 		<header class="main_h">
 
 				<div class="row">
-						<a class="logo" href="#"><img src="	http://hauryang.go168.com.tw/go168/ezcatfiles/hauryang/img/img/7435/logo-01.svg" alt="cysteellogo" style="height:80%;"></a>
+						<a class="logo" href="index.html"><img src="	http://hauryang.go168.com.tw/go168/ezcatfiles/hauryang/img/img/7435/logo-01.svg" alt="cysteellogo" style="height:80%;"></a>
 		
 						<div class="mobile-toggle">
 								<span></span>
@@ -282,12 +282,12 @@ p {
 		
 						<nav>
 								<ul style="font-weight: 900;">
-										<li><a href="#intro">公司介紹</a></li>
-										<li><a href="#intro1">設備介紹</a></li>
-										<li><a href="#intro2">產品介紹</a></li>
+										<li><a href="intro.html">公司介紹</a></li>
+										<li><a href="equipments.html">設備介紹</a></li>
+										<li><a href="product.html">產品介紹</a></li>
 										<li><a href="#intro3">環境政策</a></li>
 										<li><a href="#intro4">品質認證</a></li>
-										<li><a href="#intro5">聯絡我們</a></li>
+										<li><a href="contact.html">聯絡我們</a></li>
 										<li><a href="#intro6">子公司</a></li>
 										<li><a href="#intro7">投資人專區</a></li>
 										<li><a href="#intro8">利害關係人專區</a></li>
@@ -501,11 +501,105 @@ p {
 					</div><!-- /.container -->
 			  
 			  
-					<!-- FOOTER -->
-					<footer class="container">
-					  <p class="float-right"><a href="#">Back to top</a></p>
-					  <p>&copy; 2017-2018 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-					</footer>
+									<!-- FOOTER -->
+				<!-- Footer -->
+<footer class="page-footer font-small unique-color-dark">
+
+  
+
+  <!-- Footer Links -->
+  <div class="container text-center text-md-left mt-5 text-white pt-3"  style="background-color: #57565f;">
+
+    <!-- Grid row -->
+    <div class="row mt-3">
+
+      <!-- Grid column -->
+      <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+
+        <!-- Content -->
+        <h6 class="text-uppercase font-weight-bold">嘉鋼精密工業股份有限公司</h6>
+        <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+        <p>本公司成立於民國 63 年，迄今已有 40年的歷史。民國 86 年 12 月正式取得 ISO 9002 經濟部商品檢驗局之品保制度證書，且於翌年順利取得國外認證機構 DNV 工廠品保制度證書，使本公司產品與製程達到一定的品質水準。</p>
+
+      </div>
+      <!-- Grid column -->
+
+      <!-- Grid column -->
+      <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+
+        <!-- Links -->
+        <h6 class="text-uppercase font-weight-bold">Products</h6>
+        <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+        <p>
+          <a href="#!"><span class="text-white font-weight-light">油壓零件</span></a>
+        </p>
+        <p>
+          <a href="#!"><span class="text-white font-weight-light">產/農業機械零件</span></a>
+        </p>
+        <p>
+          <a href="#!"><span class="text-white font-weight-light">汽車/其他零件</span></a>
+        </p>
+        <p>
+          <a href="#!"><span class="text-white font-weight-light">氣體霧化金屬粉末</span></a>
+        </p>
+
+      </div>
+      <!-- Grid column -->
+
+      <!-- Grid column -->
+      <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+
+        <!-- Links -->
+        <h6 class="text-uppercase font-weight-bold">Site Map</h6>
+        <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+        <p>
+          <a href="intro.html"><span class="text-white font-weight-light">公司介紹</span></a>
+        </p>
+        <p>
+          <a href="equipments.html"><span class="text-white font-weight-light">設備介紹</span></a>
+        </p>
+        <p>
+          <a href="product.html"><span class="text-white font-weight-light">產品介紹</span></a>
+        </p>
+        <p>
+          <a href="contact.html"><span class="text-white font-weight-light">聯絡我們</span></a>
+        </p>
+
+      </div>
+      <!-- Grid column -->
+
+      <!-- Grid column -->
+      <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+
+        <!-- Links -->
+        <h6 class="text-uppercase font-weight-bold">Contact</h6>
+        <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+        <p>
+          <i class="fa fa-home mr-3"></i> 62155 嘉義縣民雄鄉成功二街21號</p>
+        <p>
+          <i class="fa fa-envelope mr-3"></i> sales@mail.cysteel.com.tw</p>
+        <p>
+          <i class="fa fa-phone mr-3"></i> +886-5-2211411</p>
+        <p>
+          <i class="fa fa-print mr-3"></i> +886-5-2218211</p>
+
+      </div>
+      <!-- Grid column -->
+
+    </div>
+    <!-- Grid row -->
+
+  </div>
+  <!-- Footer Links -->
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3 bg-dark">© 2018 Copyright:
+    <a href="#">cysteel</a>
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
 				  </main>
 
 					<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
