--- a/cysteel/intro.html
+++ b/cysteel/intro.html
@@ -283,15 +283,15 @@ p {
 		
 						<nav>
 								<ul style="font-weight: 900;">
-										<li><a href="intro.html">公司介紹</a></li>
-										<li><a href="equipments.html">設備介紹</a></li>
-										<li><a href="#intro2">產品介紹</a></li>
-										<li><a href="#intro3">環境政策</a></li>
-										<li><a href="#intro4">品質認證</a></li>
-										<li><a href="#intro5">聯絡我們</a></li>
-										<li><a href="#intro6">子公司</a></li>
-										<li><a href="#intro7">投資人專區</a></li>
-										<li><a href="#intro8">利害關係人專區</a></li>
+                  <li><a href="intro.html">公司介紹</a></li>
+                  <li><a href="equipments.html">設備介紹</a></li>
+                  <li><a href="product.html">產品介紹</a></li>
+                  <li><a href="environment.html">環境政策</a></li>
+                  <li><a href="quality.html">品質認證</a></li>
+                  <li><a href="contact.html">聯絡我們</a></li>
+                  <li><a href="subsidiary.html">子公司</a></li>
+                  <li><a href="invest.html">投資人專區</a></li>
+                  <li><a href="stake.html">利害關係人專區</a></li>
 										
 								</ul>
 						</nav>
