--- a/cysteel/equipments.html
+++ b/cysteel/equipments.html
@@ -299,31 +299,13 @@ p {
 				</div> <!-- / row -->
 		
 		</header>
-			  <section >
-				
-				
-				<div id="carouselExampleControls" class="carousel slide" data-ride="carousel" style="height:50vh;overflow: hidden;">
-						<div class="carousel-inner">
-						  <div class="carousel-item active">
-							<img class="d-block w-100" src="https://cdn.pixabay.com/photo/2016/08/08/17/07/bloom-1578783_960_720.jpg" alt="First slide">
-						  </div>
-						  <div class="carousel-item">
-							<img class="d-block w-100" src="https://cdn.pixabay.com/photo/2017/01/10/03/06/steel-1968194_960_720.jpg" alt="Second slide">
-						  </div>
-						  <div class="carousel-item">
-							<img class="d-block w-100" src="https://cdn.pixabay.com/photo/2015/08/22/11/02/iron-900393_960_720.jpg" alt="Third slide">
-						  </div>
-						</div>
-						<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-						  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-						  <span class="sr-only">Previous</span>
-						</a>
-						<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-						  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-						  <span class="sr-only">Next</span>
-						</a>
-					  </div>
-			  </section>  
+    <div class="jumbotron p-3 p-md-5 text-white rounded bg-dark" style="background-image: url('/cysteel/pic/furnace-3783545_960_720.jpg');background-size: cover;">
+      <div class="col-md-6 px-0">
+        <h1 class="display-4 font-italic">設備介紹</h1>
+        <p class="lead my-3">資訊整合系統推動及生產技術的研發</p>
+        <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p>
+      </div>
+    </div>   
 
 
 			  <main role="main">
