--- a/cysteel/stake.html
+++ b/cysteel/stake.html
@@ -8,6 +8,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Roboto:500,900,100,300,700,400' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 	<link rel="icon" type="image/png" href="http://hauryang.go168.com.tw/go168/ezcatfiles/hauryang/img/img/7435/LOGOcysteel-01.png" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 <style>
 	.main_h {
   position: fixed;
@@ -272,7 +273,7 @@ p {
 		<header class="main_h">
 
 				<div class="row">
-						<a class="logo" href="index.html"><img src="	http://hauryang.go168.com.tw/go168/ezcatfiles/hauryang/img/img/7435/logo-01.svg" alt="cysteellogo" style="height:80%;"></a>
+						<a class="logo" href="index.html"><img src="http://hauryang.go168.com.tw/go168/ezcatfiles/hauryang/img/img/7435/logo-01.svg" alt="cysteellogo" style="height:80%;"></a>
 		
 						<div class="mobile-toggle">
 								<span></span>
@@ -298,31 +299,13 @@ p {
 				</div> <!-- / row -->
 		
 		</header>
-			  <section >
-				
-				
-				<div id="carouselExampleControls" class="carousel slide" data-ride="carousel" style="height:50vh;overflow: hidden;">
-						<div class="carousel-inner">
-						  <div class="carousel-item active">
-							<img class="d-block w-100" src="https://cdn.pixabay.com/photo/2016/08/08/17/07/bloom-1578783_960_720.jpg" alt="First slide">
-						  </div>
-						  <div class="carousel-item">
-							<img class="d-block w-100" src="https://cdn.pixabay.com/photo/2017/01/10/03/06/steel-1968194_960_720.jpg" alt="Second slide">
-						  </div>
-						  <div class="carousel-item">
-							<img class="d-block w-100" src="https://cdn.pixabay.com/photo/2015/08/22/11/02/iron-900393_960_720.jpg" alt="Third slide">
-						  </div>
-						</div>
-						<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-						  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-						  <span class="sr-only">Previous</span>
-						</a>
-						<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-						  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-						  <span class="sr-only">Next</span>
-						</a>
-					  </div>
-			  </section>  
+        <div class="jumbotron p-3 p-md-5 text-white rounded bg-dark" style="background-image: url('/cysteel/pic/construction-646913_960_720.jpg');background-size: cover;background-position: center;">
+            <div class="col-md-6 px-0">
+              <h1 class="display-4 font-italic">利害關係人</h1>
+              <p class="lead my-3">本公司鼓勵內部及外部人員檢舉不誠信行為或不當行為。</p>
+              <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p>
+            </div>
+          </div>
 
 
 			  <main role="main">
