--- a/cysteel.2/index.html
+++ b/cysteel.2/index.html
@@ -3,17 +3,13 @@
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!--><html class="not-ie" lang="en"> <!--<![endif]-->
-<!--
-	ucorpora by freshdesignweb.com
-	Twitter: https://twitter.com/freshdesignweb
-	https://www.freshdesignweb.com/ucorpora/
--->
+
 <head>
 	<!-- Basic Meta Tags -->
   <meta charset="utf-8">
   <title>嘉鋼</title>
-	<meta name="description" content="ucorpora demo - Free Business Corporate HTML Template">
-	<meta name="keywords" content="ucorpora, ucorpora demo, free, template, corporate, clean, modern, bootstrap, creative, design">
+	<meta name="description" content="嘉義鋼鐵">
+	<meta name="keywords" content="嘉義鋼鐵">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--[if (gte IE 9)|!(IE)]>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
