--- a/cysteel.2/index.html
+++ b/cysteel.2/index.html
@@ -35,7 +35,8 @@
 	<!-- Internet Explorer condition - HTML5 shim, for IE6-8 support of HTML5 elements -->
 	<!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->   
+  <![endif]-->  
+  <link rel="stylesheet" href="/cysteel.2/css/lightbox.min.css"> 
 
 </head>       
 <body>
@@ -58,7 +59,7 @@
 	            <a href="#" title="Hide navigation">Hide navigation</a>
 	            <ul class="clearfix">
 	           	<li class="active"><a href="intro.html" title="">公司介紹</a></li>
-                <li><a href="equipments.html" title="">設備介紹</a></li>                
+                <li><a href="equipments.html" title="">公司介紹</a></li>                
                 <li><a href="product.html" title="">產品介紹</a></li>
                 <li><a href="environment.html" title="">環境政策</a></li>
                 <li><a href="quality.html" title=""><span>品質認證</span></a>
@@ -288,7 +289,7 @@
   <script type="text/javascript" src="/cysteel.2/js/bootstrap.min.js"></script>  
   <script type="text/javascript" src="/cysteel.2/js/functions.js"></script>
   <script type="text/javascript" defer src="/cysteel.2/js/jquery.flexslider.js"></script>
-
+<script src="/cysteel.2/js/lightbox.min.js"></script>
 </body>
 </html>
   
