--- a/cysteel.2/index.html
+++ b/cysteel.2/index.html
@@ -59,7 +59,7 @@
 	            <a href="#" title="Hide navigation">Hide navigation</a>
 	            <ul class="clearfix">
 	           	<li class="active"><a href="intro.html" title="">公司介紹</a></li>
-                <li><a href="equipments.html" title="">公司介紹</a></li>                
+                <li><a href="equipments.html" title="">設備介紹</a></li>                
                 <li><a href="product.html" title="">產品介紹</a></li>
                 <li><a href="environment.html" title="">環境政策</a></li>
                 <li><a href="quality.html" title=""><span>品質認證</span></a>
