--- a/cysteel.4/index.html
+++ b/cysteel.4/index.html
@@ -16,6 +16,9 @@
   <link rel="stylesheet" href="/cysteel.4/css/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.0.0-beta.2.4/assets/owl.carousel.min.css"></link>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.0.0-beta.2.4/assets/owl.theme.default.min.css"></link>
+   
+    <link rel="stylesheet" href="/cysteel.3/css/default.css">
+   
 <style>
 /* CSS FOR DEMO ONLY */
 body {
@@ -32,6 +35,10 @@ body {
 .animate-out {
   -webkit-animation-delay : 0ms  ;
   animation-delay : 0ms  ;
+}
+header{
+  margin-top: 125px;
+  overflow: hidden;
 }
 
 h4 {
@@ -81,24 +88,37 @@ p {
 	<title>嘉義鋼鐵</title>
 </head>
 <body>
+  <div class="container" >
+  	<div class="clearfix fixed-top" >
+				<span>Chia Yi Steel Co., Ltd.<span class="fa fa-copyright" data-content="COPY RIGHTS"></span></span>
+				<h1>嘉義精密工業股份有限公司</h1>
+				<nav>
+					<a href="https://www.facebook.com/" class="bp-icon bp-icon-prev" data-info="FB"><span>FB</span></a>
+					<a href="https://www.instagram.com/" class="bp-icon bp-icon-next" data-info="IG"><span>IG</span></a>
+					<a href="https://www.youtube.com/" class="bp-icon bp-icon-drop" data-info="youtube"><span>youtube</span></a>
+					<a href="mailto: yowbelltc@yowbelltc.com" class="bp-icon bp-icon-archive" data-info="e-mail"><span>e-mail</span></a>
+				</nav>
+      </div>	
+    </div>
 	<header>
-		<div class="cd-logo"><a href="#0"><img style="height:65%;z-index:1000;padding-bottom: 5px;" src="http://hauryang.go168.com.tw/go168/ezcatfiles/hauryang/img/img/7435/logo-01.svg" alt="Logo"></a></div>
+		<div class="cd-logo"><a href="#0"><img  src="http://hauryang.go168.com.tw/go168/ezcatfiles/hauryang/img/img/7435/logo-01.svg" alt="Logo"></a></div>
 
 		<nav class="cd-main-nav-wrapper">
 			<ul class="cd-main-nav">
-				<li><a href="#0">設備介紹</a></li>
-				<li><a href="#0">產品介紹</a></li>
-				<li><a href="#0">環境政策</a></li>
-				<li><a href="#0">品質認證</a></li>
+          <li><a href="#0">About us</a></li>
+				<li><a href="#0">Equipment</a></li>
+				<li><a href="#0">Product</a></li>
+				<li><a href="#0">Environment</a></li>
+				<li><a href="#0">Quality</a></li>
 				<li>
-					<a href="#0" class="cd-subnav-trigger"><span>了解更多</span></a>
+					<a href="#0" class="cd-subnav-trigger"><span>More</span></a>
 
 					<ul>
 						<li class="go-back"><a href="#0">Menu</a></li>
-						<li><a href="#0">聯絡我們</a></li>
-						<li><a href="#0">子公司</a></li>
-						<li><a href="#0">投資人專區</a></li>
-						<li><a href="#0">利害關係人專區</a></li>
+						<li><a href="#0">Contact</a></li>
+						<li><a href="#0">Subsidiary</a></li>
+						<li><a href="#0">Invest</a></li>
+						<li><a href="#0">Stake</a></li>
 						
 						<li><a href="#0" class="placeholder">Placeholder</a></li>
 					</ul>
@@ -109,24 +129,39 @@ p {
 		<a href="#0" class="cd-nav-trigger">Menu<span></span></a>
 	</header>
 	
-	<main class="cd-main-content">
+	<main class="cd-main-content mt-5" style="">
         <!-- main content here -->
         <div class="owl-carousel owl-theme">
-            <div class="item" style="background-image: url('/cysteel.2/pic/slider1.jpg');background-size: cover;">
-              <h4 data-animation-in="fadeInUp" data-animation-out="animate-out fadeOutDown">Slide 1</h4>
+            <div class="item" style="background-image: url('/cysteel.4/img/slider1.jpg');background-size: cover;background-position: bottom;">
+             <!-- <h4 data-animation-in="fadeInUp" data-animation-out="animate-out fadeOutDown">Slide 1</h4>
               <p data-animation-in="rollIn" data-animation-out="animate-out rollOut">Cras a elementum dolor. Praesent aliquam sapien ac eros semper ullamcorper. Sed imperdiet enim at sodales suscipit. Aenean eget faucibus ipsum.</p>
               <p><a href="#" class="btn" data-animation-in="fadeInLeft" data-animation-out="animate-out fadeOutRight">Button 1</a></p>
-            </div>
-            <div class="item" style="background-image: url('/cysteel.2/pic/slider2.jpg');background-size: cover;">
-              <h4 data-animation-in="flipInY" data-animation-out="animate-out fadeOutUp">Slide 2</h4>
+            --></div>
+            <div class="item" style="background-image: url('/cysteel.4/img/slider2.jpg');background-size: cover;background-position: bottom;">
+              <!--<h4 data-animation-in="flipInY" data-animation-out="animate-out fadeOutUp">Slide 2</h4>
               <p data-animation-in="flipInX" data-animation-out="animate-out fadeOutLeft">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id dolor pulvinar, mollis orci vitae, molestie elit. Maecenas scelerisque ipsum nibh, id imperdiet nulla lobortis nec.</p>
               <p><a href="#" class="btn" data-animation-in="bounceInLeft" data-animation-out="animate-out bounceOutRight">Button 2</a></p>
-            </div>
-            <div class="item" style="background-image: url('/cysteel.2/pic/slider3.jpg');background-size: cover;">
-              <h4 data-animation-in="slideInDown" data-animation-out="animate-out slideOutUp">Slide 3</h4>
+            --></div>
+            <div class="item" style="background-image: url('/cysteel.4/img/slider3.jpg');background-size: cover;background-position: bottom;">
+              <!--<h4 data-animation-in="slideInDown" data-animation-out="animate-out slideOutUp">Slide 3</h4>
               <p data-animation-in="slideInRight" data-animation-out="animate-out fadeOut">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id dolor pulvinar, mollis orci vitae, molestie elit. Maecenas scelerisque ipsum nibh, id imperdiet nulla lobortis nec.</p>
               <p><a href="#" class="btn" data-animation-in="slideInUp" data-animation-out="animate-out slideOutDown">Button 3</a></p>
-            </div>
+            --></div>
+            <div class="item" style="background-image: url('/cysteel.4/img/slider4.jpg');background-size: cover;background-position: bottom;">
+              <!--<h4 data-animation-in="slideInDown" data-animation-out="animate-out slideOutUp">Slide 3</h4>
+              <p data-animation-in="slideInRight" data-animation-out="animate-out fadeOut">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id dolor pulvinar, mollis orci vitae, molestie elit. Maecenas scelerisque ipsum nibh, id imperdiet nulla lobortis nec.</p>
+              <p><a href="#" class="btn" data-animation-in="slideInUp" data-animation-out="animate-out slideOutDown">Button 3</a></p>
+            --></div>
+            <div class="item" style="background-image: url('/cysteel.4/img/slider5.jpg');background-size: cover;background-position: bottom;">
+              <!--<h4 data-animation-in="slideInDown" data-animation-out="animate-out slideOutUp">Slide 3</h4>
+              <p data-animation-in="slideInRight" data-animation-out="animate-out fadeOut">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id dolor pulvinar, mollis orci vitae, molestie elit. Maecenas scelerisque ipsum nibh, id imperdiet nulla lobortis nec.</p>
+              <p><a href="#" class="btn" data-animation-in="slideInUp" data-animation-out="animate-out slideOutDown">Button 3</a></p>
+            --></div>
+            <div class="item" style="background-image: url('/cysteel.4/img/slider6.jpg');background-size: cover;background-position: bottom;">
+              <!--<h4 data-animation-in="slideInDown" data-animation-out="animate-out slideOutUp">Slide 3</h4>
+              <p data-animation-in="slideInRight" data-animation-out="animate-out fadeOut">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id dolor pulvinar, mollis orci vitae, molestie elit. Maecenas scelerisque ipsum nibh, id imperdiet nulla lobortis nec.</p>
+              <p><a href="#" class="btn" data-animation-in="slideInUp" data-animation-out="animate-out slideOutDown">Button 3</a></p>
+            --></div>
         </div>
         <!-- Services section -->
 	<section id="what-we-do">
@@ -137,8 +172,8 @@ p {
 				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
 					<div class="card">
 						<div class="card-block block-1">
-							<h3 class="card-title">Special title</h3>
-							<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+							<h3 class="card-title">About</h3>
+							<p class="card-text">Chia Yi Steel Co., Ltd. is a multinational company based in Taiwan since 1974 . </p>
 							<a href="javascript:void();" title="Read more" class="read-more" >Read more<i class="fa fa-angle-double-right ml-2"></i></a>
 						</div>
 					</div>
@@ -146,8 +181,8 @@ p {
 				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
 					<div class="card">
 						<div class="card-block block-2">
-							<h3 class="card-title">Special title</h3>
-							<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+							<h3 class="card-title">Goal</h3>
+							<p class="card-text">bring customers ideas and reflect them into a concrete and physical object improving the lifestyle and environment of our world. </p>
 							<a href="javascript:void();" title="Read more" class="read-more" >Read more<i class="fa fa-angle-double-right ml-2"></i></a>
 						</div>
 					</div>
@@ -155,8 +190,8 @@ p {
 				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
 					<div class="card">
 						<div class="card-block block-3">
-							<h3 class="card-title">Special title</h3>
-							<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+							<h3 class="card-title">MARKETS</h3>
+							<p class="card-text">  Areas of service ranging from Asia to Europe and America! </p>
 							<a href="javascript:void();" title="Read more" class="read-more" >Read more<i class="fa fa-angle-double-right ml-2"></i></a>
 						</div>
 					</div>
@@ -166,8 +201,8 @@ p {
 				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
 					<div class="card">
 						<div class="card-block block-4">
-							<h3 class="card-title">Special title</h3>
-							<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+							<h3 class="card-title">Awards</h3>
+							<p class="card-text">AGCO taiwan 2018 sustainability</p>
 							<a href="javascript:void();" title="Read more" class="read-more" >Read more<i class="fa fa-angle-double-right ml-2"></i></a>
 						</div>
 					</div>
@@ -175,7 +210,7 @@ p {
 				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
 					<div class="card">
 						<div class="card-block block-5">
-							<h3 class="card-title">Special title</h3>
+							<h3 class="card-title">QUALITY</h3>
 							<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
 							<a href="javascript:void();" title="Read more" class="read-more" >Read more<i class="fa fa-angle-double-right ml-2"></i></a>
 						</div>
@@ -184,8 +219,8 @@ p {
 				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
 					<div class="card">
 						<div class="card-block block-6">
-							<h3 class="card-title">Special title</h3>
-							<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+							<h3 class="card-title">Product</h3>
+							<p class="card-text">Jack’s parts, hydraulic valve, rolling rotor, carrier support, construction machinery parts... </p>
 							<a href="javascript:void();" title="Read more" class="read-more" >Read more<i class="fa fa-angle-double-right ml-2"></i></a>
 						</div>
 					</div>
@@ -196,22 +231,22 @@ p {
 <!--pic-->
         <div class="owl-carousel1">
             <div class="item" style="background-image: url('/cysteel.2/pic/client1.jpg');background-size: cover;">
-              <h2>Swipe</h2>
+              <h2></h2>
             </div>
             <div class="item" style="background-image: url('/cysteel.2/pic/client2.jpg');background-size: cover;">
-              <h2>Drag</h2>
+              <h2></h2>
             </div>
             <div class="item" style="background-image: url('/cysteel.2/pic/client3.jpg');background-size: cover;">
-              <h2>Responsive</h2>
+              <h2></h2>
             </div>
             <div class="item" style="background-image: url('/cysteel.2/pic/client4.jpg');background-size: cover;">
-              <h2>CSS3</h2>
+              <h2></h2>
             </div>
             <div class="item" style="background-image: url('/cysteel.2/pic/client5.jpg');background-size: cover;">
-              <h2>Fast</h2>
+              <h2></h2>
             </div>
             <div class="item" style="background-image: url('/cysteel.2/pic/client6.jpg');background-size: cover;">
-              <h2>Easy</h2>
+              <h2></h2>
             </div>
           </div>
 <!--footer-->
