--- a/cysteel.2/index.html
+++ b/cysteel.2/index.html
@@ -24,7 +24,7 @@
   <link href="/cysteel.2/css/bootstrap-override.css" rel="stylesheet">
 
   <!-- Font Avesome Styles -->
-  <link href="/cysteel.2/css/font-awesome/font-awesome.css" rel="stylesheet">
+  
 	<!--[if IE 7]>
 		<link href="css/font-awesome/font-awesome-ie7.min.css" rel="stylesheet">
 	<![endif]-->
@@ -286,6 +286,7 @@
 
   <!-- JavaScripts -->
   <script type="text/javascript" src="/cysteel.2/js/jquery-1.8.3.min.js"></script> 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
   <script type="text/javascript" src="/cysteel.2/js/bootstrap.min.js"></script>  
   <script type="text/javascript" src="/cysteel.2/js/functions.js"></script>
   <script type="text/javascript" defer src="/cysteel.2/js/jquery.flexslider.js"></script>
