--- a/cysteel.3/index.html
+++ b/cysteel.3/index.html
@@ -7,9 +7,9 @@
 <head>
 	<!-- Basic Meta Tags -->
   <meta charset="utf-8">
-  <title>嘉鋼</title>
-	<meta name="description" content="嘉義鋼鐵">
-	<meta name="keywords" content="嘉義鋼鐵">
+  <title>嘉義精密工業股份有限公司</title>
+	<meta name="description" content="嘉義精密工業股份有限公司">
+	<meta name="keywords" content="嘉義精密工業股份有限公司">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--[if (gte IE 9)|!(IE)]>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,7 +24,7 @@
   <link href="/cysteel.2/css/bootstrap-override.css" rel="stylesheet">
 
   <!-- Font Avesome Styles -->
-  <link href="/cysteel.2/css/font-awesome/font-awesome.css" rel="stylesheet">
+  <!--<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">-->
 	<!--[if IE 7]>
 		<link href="css/font-awesome/font-awesome-ie7.min.css" rel="stylesheet">
 	<![endif]-->
@@ -37,19 +37,10 @@
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->  
   <link rel="stylesheet" href="/cysteel.2/css/lightbox.min.css"> 
- <link rel="stylesheet" href="/cysteel.3/css/demo.css">
+ <link rel="stylesheet" href="/cysteel.3/css/default.css">
  <link rel="stylesheet" href="/cysteel.3/css/component.css">
  <script src="/cysteel.3/js/modernizr-custom.js"></script>
- <script type="text/javascript">
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-7243260-2']);
-  _gaq.push(['_trackPageview']);
-  (function() {
-  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-  </script>
+ 
 </head>       
 <body>
   <!-- Header -->
@@ -62,10 +53,10 @@
         <!-- navigation -->
         <div class="container">
 			<header class="clearfix">
-				<span>Chia Yi Steel Co., Ltd.<span class="bp-icon bp-icon-about" data-content="COPY RIGHTS"></span></span>
-				<h1>嘉義鋼鐵股份有限公司</h1>
+				<span>Chia Yi Steel Co., Ltd.<span class="fa fa-copyright" data-content="COPY RIGHTS"></span></span>
+				<h1>嘉義精密工業股份有限公司</h1>
 				<nav>
-					<a href="https://www.facebook.com/" class="bp-icon bp-icon-prev" data-info="FB"><span>FB</span></a>
+					<a href="https://www.facebook.com/" class="fab fa-facebook-f" data-info="FB"><span>FB</span></a>
 					<a href="https://www.instagram.com/" class="bp-icon bp-icon-next" data-info="IG"><span>IG</span></a>
 					<a href="https://www.youtube.com/" class="bp-icon bp-icon-drop" data-info="youtube"><span>youtube</span></a>
 					<a href="mailto: yowbelltc@yowbelltc.com" class="bp-icon bp-icon-archive" data-info="e-mail"><span>e-mail</span></a>
@@ -341,15 +332,17 @@
   <!-- Footer End -->
 
   <!-- JavaScripts -->
+  <script src="/cysteel.3/js/cbpHorizontalSlideOutMenu.min.js"></script>
+		<script>
+			var menu = new cbpHorizontalSlideOutMenu( document.getElementById( 'cbp-hsmenu-wrapper' ) );
+    </script>
+    
   <script type="text/javascript" src="/cysteel.2/js/jquery-1.8.3.min.js"></script> 
   <script type="text/javascript" src="/cysteel.2/js/bootstrap.min.js"></script>  
   <script type="text/javascript" src="/cysteel.2/js/functions.js"></script>
-  <script type="text/javascript" defer src="/cysteel.2/js/jquery.flexslider.js"></script>
+
 <script src="/cysteel.2/js/lightbox.min.js"></script>
-<script src="/cysteel.3/js/modernizr-custom.js"></script>
-		<script>
-			var menu = new cbpHorizontalSlideOutMenu( document.getElementById( 'cbp-hsmenu-wrapper' ) );
-		</script>
+
 		
 </body>
 </html>
