--- a/cysteel.3/index.html
+++ b/cysteel.3/index.html
@@ -138,14 +138,14 @@
                       <!-- Service Container End --> 
                       <div class="span4">
                         <div class="ic-1"><i class=" fa fa-hands"></i></div>
-                        <div class="title-1"><h4> product development </h4></div>
+                        <div class="title-1"><h4>PRODUCT DEVELOPMENT  </h4></div>
                         <div class="text-1">         
                           Enhance product development efficiency and accuracy to 100%.
                         </div>
                       </div>
                       <div class="span4">
                         <div class="ic-1"><i class="fa fa-flag"></i></div>
-                        <div class="title-1"><h4>Reduction  defective ration</h4></div>
+                        <div class="title-1"><h4>REDUCTION DEFECTIVE RATION </h4></div>
                         <div class="text-1">
                           Reduction of machining defective ration to be under 3000 PPM internally and 500 PPM externally.
                         </div>
